<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Showcase</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Park"></string>
    <string name="Bus"></string>
    <string name="main_title">Showcase</string>
    <string name="title_about">About</string>
    <string name="title_park">Park</string>
    <string name="title_train">Train</string>
    <string name="title_bus">Bus</string>
    <string name="title_mall">Mall</string>
    <string name="title_restaurant">Restaurant</string>
    <string name="title_gasstation">Gas Station</string>
    <string name="title_grocery">Grocery</string>
    <string name="title_church">Church</string>
    <string name="title_myfavorite">My Favorite</string>
    <string name="title_exit">EXIT</string>
    <string name="title_findaplace">Find A Place!</string>
    <string name="title_wheretogotoday">Where do YOU want to go today?</string>
    <string name="title_cityname">Hallandale Beach, FL</string>
    <string name="title_narrowrestaurant">Narrow it Down!</string>
    <string name="title_pickarestaurant">Which \"Restaurant\" would you like to go to?</string>
    <string name="title_restaurantBack">Back</string>
    <string name="title_back">Back</string>
    <string name="title_find">Find!</string>
    <string name="title_pickapark">Which \"Park\" would you like to go to?</string>
    <string name="title_narrowPark">Narrow it Down!</string>
    <string name="title_pickatrain">Which \"Train\" would you like to take?</string>
    <string name="title_pickabus">Which \"Bus\" would you like to take?</string>
    <string name="title_schoolsbutton">Schools</string>
    <string name="button_schools">Schools</string>
    <string name="button_theaters">Theaters</string>
    <string name="button_libraries">Libraries</string>
    <string name="button_hospitals">Hospitals</string>
    <string name="button_bus">Bus</string>
    <string name="button_mall">Mall</string>
    <string name="button_restaurants">Restaurants</string>
    <string name="button_grocery">Grocery</string>
    <string name="button_favorites">My Favorites</string>
    <string name="button_about">About</string>
    <string name="title_pickaschool">Which \"School\" would you like to go to?</string>
    <string name="button_back">Back</string>
    <string name="button_find">Find!</string>
    <string name="title_pickATheater">Which \"Theater\" would you like to go to?</string>
    <string name="title_pickALibrary">Which \"Library\" would you like to go to?</string>
    <string name="title_pickAHospital">Which \"Hospital\" would you like to go to?</string>
    <string name="title_pickAMall">Which \"Mall\" would you like to go to?</string>
    <string name="title_pickAGrocery">Which \"Grocery Store\" would you like to visit</string>
    <string name="title_myFavorites">My Favorites</string>
    <string name="button_favoriteA">Favorite A</string>
    <string name="button_favoriteB">Favorite B</string>
    <string name="button_favoriteC">Favorite C</string>
    <string name="button_favoriteD">Favorite D</string>
    <string name="button_favoriteE">Favorite E</string>
    <string name="button_favoriteF">Favorite F</string>
    <string name="button_favoriteG">Favorite G</string>
    <string name="button_favoriteH">Favorite H</string>
    <string name="button_favoriteI">favorite I</string>
    <string name="button_favoriteJ">Favorite J</string>
    <string name="button_favoriteIrev1">Favorite I</string>
    <string name="title_login">Login to Showcase</string>
    <string name="title_userName">Username</string>
    <string name="title_password">Password</string>
    <string name="button_login">Login</string>
    <string name="title_needAccount">Don\'t have an account?  Sign up now!</string>
    <string name="button_signUp">Sign Up!</string>
    <string name="title_createAccount">Create an Account!</string>
    <string name="title_firstName">First Name</string>
    <string name="title_lastName">Last Name</string>
    <string name="button_create">Create!</string>
    <string name="location_name">Location Name</string>
    <string name="title_username"></string>
    <string name="title_userRating">User Rating</string>
    <string name="title_userComments">User Comments:</string>
    <string name="title_locationInfo">Location Information</string>
    <string name="button_commentsRatings">View Comments/Ratings</string>
    <string name="button_directions">Directions</string>
    <string name="button_rate">Rate</string>
    <string name="button_addFavorite">Add to Favorites</string>
    <string name="button_exit">Exit</string>
    <string name="title_myRatings">My Ratings/Comments</string>
    <string name="title_myRating"></string>
    <string name="title_myRatingVer1">My Rating:</string>
    <string name="title_myComments">My Comments:</string>
    <string name="button_backtomap">Back to Map!</string>
    <string name="button_save">Save</string>
    <string name="title_directions">Directions</string>
    <string name="title_mapLocation">Map Location</string>
    <string name="title_activity_narrow_schools">NarrowSchools</string>
    <string name="title_activity_narrow_theaters">NarrowTheaters</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_narrow_libraries">NarrowLibraries</string>
    <string name="title_activity_narrow_hospitals">NarrowHospitals</string>
    <string name="title_activity_narrow_buses">NarrowBuses</string>
    <string name="title_activity_narrow_restaurant">NarrowRestaurant</string>
    <string name="title_activity_narrow_malls">NarrowMalls</string>
    <string name="title_activity_narrow_grocery">NarrowGrocery</string>
    <string name="title_activity_my_favorites">MyFavorites</string>
    <string name="title_activity_location_information">LocationInformation</string>
    <string name="title_activity_ratings_screen">RatingsScreen</string>
    <string name="title_activity_directions">Directions</string>
    <string name="title_activity_my_ratings_comments">MyRatingsComments</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_create_an_account">CreateAnAccount</string>
    <string name="title_activity_google_map">GoogleMap</string>
    <string name="title_activity_location_map">LocationMap</string>
    <string name="dialog_text">Students</string>
    <string name="dialog_text_description">The students who contributed to this app are Carla, Elizabeth, Chloe, Eliannie, and DaVaughna.</string>
    <string name="btn_finish_dialog_label">Done</string>
    <string name="dialog_text2">Engineers</string>
    <string name="dialog_text2_description">The engineers working on this app are John Odlum, Maryam Eneim, and Glenn Freytag.</string>
    <string name="dialog_text3">Version 1.2</string>
    <string name="dialog_text3_description">The latest version 1.2 is running on this device.</string>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="title_activity_showcase_splash">ShowcaseSplash</string>

</resources>
