<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/narrowBus"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cartoon_city_landscape" >

    <TextView
        android:id="@+id/pickABus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/narrowDownBus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/title_pickabus"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <Button
        android:id="@+id/busBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:background="@android:drawable/btn_default"
        android:minHeight="50dp"
        android:minWidth="125dp"
        android:text="@string/title_back" />

    <Button
        android:id="@+id/findBus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/busBack"
        android:layout_alignBottom="@+id/busBack"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="@android:drawable/btn_default"
        android:minHeight="50dp"
        android:minWidth="125dp"
        android:text="@string/title_find" />

    <TextView
        android:id="@+id/narrowDownBus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/title_narrowrestaurant"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:textSize="50sp" />

    <Spinner
        android:id="@+id/bus_line"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/pickABus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="#ffffff" />

</RelativeLayout>
