<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images_6"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/title_createAccount"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0000ff"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/createAccount"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/title_firstName"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstName"
        android:layout_alignStart="@+id/firstName"
        android:layout_below="@+id/firstName"
        android:layout_marginTop="50dp"
        android:text="@string/title_lastName"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/userNameCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastName"
        android:layout_alignStart="@+id/lastName"
        android:layout_below="@+id/lastName"
        android:layout_marginTop="75dp"
        android:text="@string/title_userName"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/passwordCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNameCreate"
        android:layout_alignStart="@+id/userNameCreate"
        android:layout_below="@+id/userNameCreate"
        android:layout_marginTop="50dp"
        android:text="@string/title_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonBackAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@android:drawable/btn_default"
        android:minHeight="50dp"
        android:minWidth="125dp"
        android:text="@string/button_back" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonBackAccount"
        android:layout_alignLeft="@+id/buttonBackAccount"
        android:layout_alignStart="@+id/buttonBackAccount"
        android:layout_marginBottom="50dp"
        android:background="@android:drawable/btn_default"
        android:minHeight="50dp"
        android:minWidth="125dp"
        android:text="@string/button_create" />

    <EditText
        android:id="@+id/editText_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/firstName"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_toEndOf="@+id/firstName"
        android:layout_toRightOf="@+id/firstName"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lastName"
        android:layout_alignLeft="@+id/editText_firstname"
        android:layout_alignStart="@+id/editText_firstname"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_account_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userNameCreate"
        android:layout_alignLeft="@+id/editText_lastname"
        android:layout_alignStart="@+id/editText_lastname"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_account_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passwordCreate"
        android:layout_alignLeft="@+id/editText_account_username"
        android:layout_alignStart="@+id/editText_account_username"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="textPassword" />

</RelativeLayout>
