<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images_6" >

    <TextView
        android:id="@+id/textViewMyRatings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/title_myRatings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0000ff"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textViewMyRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewMyRatings"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/title_myRatingVer1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMyRatings"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/textViewMyRating"
        android:layout_toRightOf="@+id/textViewMyRating"
        android:numStars="5" />

    <TextView
        android:id="@+id/textViewMyComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewMyRating"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/title_myComments"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMyComments"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#ffffff"
        android:gravity="top"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="10"
        android:minHeight="200dp"
        android:minWidth="500dp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonBackToMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/about"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:background="@android:drawable/btn_default"
        android:minHeight="50dp"
        android:minWidth="150dp"
        android:text="@string/button_back" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonBackToMap"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="@android:drawable/btn_default"
        android:minHeight="50dp"
        android:minWidth="150dp"
        android:text="@string/button_save" />

</RelativeLayout>
