<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images_6" >

    <TextView
        android:id="@+id/locationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:maxWidth="500dp"
        android:text="@string/location_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0000ff"
        android:textSize="50sp" />
    
    <EditText
        android:id="@+id/ratingsLocationInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="textMultiLine"
        android:minHeight="60dp"
        android:minWidth="500dp"
        android:textColor="#000000"
        android:textSize="20sp" >

    </EditText>
    
    <TextView
        android:id="@+id/userRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ratingsLocationInfo"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:text="@string/title_userRating"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingsLocationInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:maxHeight="50dp"
        android:minHeight="50dp"
        android:numStars="5"
        android:isIndicator="true" />

    <TextView
        android:id="@+id/userComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userRating"
        android:layout_alignStart="@+id/userRating"
        android:layout_below="@+id/ratingBar1"
        android:layout_marginTop="20dp"
        android:text="@string/title_userComments"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/directionsScroll"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/userComments"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" >
    
	    <TextView
	        android:id="@+id/commentsList"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="#ffffff"
	        android:enabled="false"
	        android:gravity="top"
	        android:maxLines="20"
	        android:minWidth="500dp"
	        android:scrollbars="vertical"
	        android:textColor="#000000"
	        android:textSize="20sp" >
	        
	    </TextView>
    
    </ScrollView>

    <Button
        android:id="@+id/ratingBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@android:drawable/btn_default"
        android:minHeight="50dp"
        android:minWidth="125dp"
        android:text="@string/button_back" />

</RelativeLayout>
